--- a/index.html
+++ b/index.html
@@ -189,6 +189,6 @@
   </div>
 </main>
 
-<footer>© אפליקציה עצמאית (CSS + MathJax)</footer>
+<footer>© האוניברסיטה הפתוחה (CSS + MathJax)</footer>
 </body>
 </html>
